fixed navigation menu alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -332,15 +332,15 @@ input {
         padding: 0%;
     }
     .container {
-        margin-top: 5%;
+        margin-top: 8%;
         padding: 0%;
     }
     .row {
         margin-top: 10%;
     }
     .navbar {
-        margin-top: 5.75%;
-        width: 100%;
+        margin-top: 6.25%;
+        width: 95%;
     }
     .nav-buttons {
         background-color: white;
